mixed_type_recycler_view_for_shot_detail

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -12,7 +12,10 @@
     <string name="login">Log in</string>
     <string name="logout">Log out</string>
     <string name="save">Save</string>
+    <string name="bucket">Bucket</string>
+    <string name="like">Like</string>
     <string name="share">Share</string>
+    <string name="user_profile_picture">User profile picture</string>
 
     <string name="open_drawer">open drawer</string>
     <string name="close_drawer">close drawer</string>
@@ -23,8 +26,14 @@
     <string name="new_bucket_name">Bucket name</string>
     <string name="new_bucket_descripiton">Bucket description</string>
 
+    <string name="shot_author_picture">Shot author picture</string>
+    <string name="shot_count">{0,choice,0#0 shot|1#1 shot|1&lt;{0} shots}</string>
     <string name="shot_detail_loading_buckets">Loading buckets, just one second…</string>
     <string name="shot_image">Shot image</string>
 
-    <string name="shot_count">{0,choice,0#0 shot|1#1 shot|1&lt;{0} shots}</string>
+    <string name="auth_activity_title">Log into Dribbble</string>
+
+    <string name="activity_login_btn_text">Log into Dribbble</string>
+    <string name="activity_login_icon">Dribbble icon</string>
+
 </resources>
